--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+*.log
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -124,7 +124,7 @@ celerybeat.pid
 .env
 .venv
 env/
-venv/
+
 ENV/
 env.bak/
 venv.bak/
